--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,8 @@ workflows:
       - run_tests
       - docker/publish:
           # complete the image setting with your docker details. For example:
-            # image: stevenduckaert/$CIRCLE_PROJECT_REPONAME
-          image: stevenduckaert/koolkubernetes
+          image: stevenduckaert/$CIRCLE_PROJECT_REPONAME
+          # image: stevenduckaert/koolkubernetes
           tag: latest
           dockerfile: dockerfile
           requires:
